<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:numericShortcut="2" android:title="@string/np2_menu" android:icon="@drawable/np2" android:id="@+id/np2_menu"/>

	<item android:icon="@drawable/ic_menu_save" android:title="@string/fdd" android:id="@+id/fdd">
		<menu>
			<item android:id="@+id/FDD1open" android:title="FDD1 open"></item>
			<item android:id="@+id/FDD1eject" android:title="FDD1 eject"></item>
			<item android:id="@+id/FDD2open" android:title="FDD2 open"></item>
			<item android:id="@+id/FDD2eject" android:title="FDD2 eject"></item>
		</menu>
	</item>
	<item android:id="@+id/hdd" android:title="@string/hdd" android:icon="@drawable/ic_menu_hdd">
		<menu>
			<item android:id="@+id/HDD1open" android:title="SASI1 open"></item>
			<item android:id="@+id/HDD1eject" android:title="SASI1 remove"></item>
			<item android:id="@+id/HDD2open" android:title="SASI2 open"></item>
			<item android:id="@+id/HDD2eject" android:title="SASI2 remove"></item>
		</menu>
	</item>
	<item android:id="@+id/setting" android:icon="@drawable/preferences" android:title="@string/setting">
		<menu>
			<item android:id="@+id/fullscreen" android:title="@string/setting"></item>
			<item android:id="@+id/keyboard" android:title="@string/soft_keyboard"></item>
		</menu>
	</item>
	<item android:title="@string/reset" android:id="@+id/reset" android:icon="@drawable/refresh"></item>
	<item android:title="@string/exit" android:id="@+id/exit" android:icon="@drawable/power_off"></item>
	
</menu>
	
